<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <GridLayout
        android:paddingTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/server_host_text"
            android:layout_width="match_parent"
            android:text="@string/server_host_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="0"/>
        <EditText
            android:id="@+id/server_host"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="0"/>
        <TextView
            android:id="@+id/server_port_text"
            android:text="@string/server_port_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="1"/>
        <EditText
            android:id="@+id/server_port"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="1"/>
        <TextView
            android:id="@+id/user_name_text"
            android:text="@string/user_name_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="2"/>
        <EditText
            android:id="@+id/user_name"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="2"/>
        <TextView
            android:id="@+id/password_text"
            android:text="@string/password_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="3"/>
        <EditText
            android:id="@+id/password"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="3"/>
        <TextView
            android:id="@+id/first_name_text"
            android:text="@string/first_name_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="4"/>
        <EditText
            android:id="@+id/first_name"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="4"/>
        <TextView
            android:id="@+id/last_name_text"
            android:text="@string/last_name_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="5"/>
        <EditText
            android:id="@+id/last_name"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="5"/>
        <TextView
            android:id="@+id/email_text"
            android:text="@string/email_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="6"/>
        <EditText
            android:id="@+id/email"
            android:width="300dp"
            android:layout_column="1"
            android:layout_row="6"/>
        <TextView
            android:id="@+id/gender_text"
            android:text="@string/gender_label"
            android:layout_gravity="right"
            android:layout_column="0"
            android:layout_row="7"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male_button"
                android:text="@string/male_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/female_button"
                android:text="@string/female_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>


    </GridLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_label"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_label"/>


    </LinearLayout>


</LinearLayout>